# excel_to_pdf_converter

./: .gitignore  Dockerfile  README.md  generate_sample_pdf.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  excel.py  main.py  pdf_build.py  storage.py
config/: layout.yaml  options.yaml
static/: excel_template.xlsx  index.html  login.html  register.html
